replace usage of .get(0) with .getFirst()